--- a/estilos.css
+++ b/estilos.css
@@ -4,3 +4,12 @@ body{
     flex-direction: column;
 }
 
+.texto{
+    color: red;
+    margin: 1em;
+}
+
+.video iframe{
+    width: 100%;
+    height: 200px;
+}
