--- a/estilos.css
+++ b/estilos.css
@@ -5,11 +5,25 @@ body{
 }
 
 .texto{
-    color: red;
+    color: rgb(31, 30, 30);
     margin: 1em;
 }
 
 .video iframe{
     width: 100%;
     height: 200px;
+}
+
+.imagem img{
+    width:100%;
+
+}
+
+h1{
+    font-family: 'Dancing Script', cursive;
+    text-align: center;
+}
+h2{
+    font-family: 'Dancing Script', cursive;
+    text-align: center;
 }
